# miniGPT

./: .gitignore  LICENSE  README.md  pyproject.toml  quickstart.sh  test_rustbpe.py
minigpt/: adamw.py  common.py  dataloader.py  dataset.py  gpt.py  muon.py  report.py  tokenizer.py
pybpe/: base.py  basic.py  gpt4.py  regex.py
rustbpe/: Cargo.toml
tests/: chat.py  test_dataloader.py  test_gpt.py  test_pybpe.py  test_rustbpe.py  train.py  train_tokenizer.py
