[project]
name = "minigpt"
version = "0.1.0"
description = "A minimal full-stack ChatGPT clone recreated from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "fastapi>=0.121.2",
    "files-to-prompt>=0.6",
    "psutil>=7.1.3",
    "pyarrow>=22.0.0",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "uvicorn>=0.38.0",
    "wandb>=0.23.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "rustbpe"
bindings = "pyo3"
python-source = "."
manifest-path = "rustbpe/Cargo.toml" 

[dependency-groups]
dev = [
    "maturin>=1.10.1",
    "pytest>=9.0.1",
]

# target torch to cuda 13.0 or CPU
[tool.uv.sources]
torch = [  
    { index = "pytorch-cpu", extra = "cpu" },  
    { index = "pytorch-cu130", extra = "gpu" },  
]

[[tool.uv.index]]  
name = "pytorch-cpu"  
url = "https://download.pytorch.org/whl/cpu"  
explicit = true  
  
[[tool.uv.index]]  
name = "pytorch-cu130"  
url = "https://download.pytorch.org/whl/cu130"  
explicit = true


[project.optional-dependencies]  
cpu = [  
    "torch>=2.9.1",  
]  
gpu = [  
    "torch>=2.9.1",  
]  
  
[tool.uv]  
conflicts = [  
    [  
        { extra = "cpu" },  
        { extra = "gpu" },  
    ],  
]
